# LorenzMLSim

./: LICENSE  README.md  neural_ode.py  pyproject.toml
NeuralODE/: main.py  neural_ode.py
NeuralODE/data/: generate_data.py
NeuralODE/evaluation/: infer.py
NeuralODE/train/: train.py
PINN/toy_example/: READEME.md
PINN/toy_example/src/: config.json  config.py  model.py  physics.py  train.py  visualize.py
data/: generate_data.py
docker/: Dockerfile  docker-compose.yml
evaluation/: infer.py
train/: train.py
utils/: util.py
